Center popup, correct grey background

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <span class="popup-info">
                     <span class="info-container">
                         <img class="logo-escuela" src="./img/Escuela conectada-01.svg" alt="">
-                        <span class="texto-escuela">Escuelas conectadas a hoy</span>
+                        <span class="texto-escuela light-blue">Escuelas conectadas a hoy</span>
                         <span class="division-bar-popup"></span>
                         <img class="logo-escuela" src="./img/Escuela no conectada-01.svg" alt="">
                         <span class="texto-escuela">Escuelas próximas a conectar</span>
